--- a/css/menu-style.css
+++ b/css/menu-style.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   body {
     width: 100%;
     height: 100%;
@@ -99,6 +99,7 @@
     margin-bottom: 30px;
   }
   .section-menu__btn .menu__btn:hover {
+    filter: brightness(1.15);
     cursor: pointer;
   }
 
