--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 768px) {
   body {
     width: 100%;
     font-family: Roboto, Times New Roman, Times, serif;
@@ -36,6 +36,9 @@
   .exploration .location i {
     padding-right: 10px;
   }
+  .exploration .location p {
+    font-weight: 600;
+  }
   .exploration .exploration-content {
     display: flex;
     flex-direction: column;
@@ -49,7 +52,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    font-weight: 400;
+    font-weight: 1000;
     font-size: 20px;
     margin-top: 30px;
   }
@@ -57,9 +60,10 @@
     text-align: center;
     align-items: center;
     justify-content: center;
-    font-weight: 100;
+    font-weight: 400;
     font-style: normal;
     font-size: 20px;
+    opacity: 0.6;
   }
   .exploration .exploration-content .exploration-content__btn {
     height: 50px;
@@ -70,6 +74,12 @@
     border: 0px transparent;
     margin-top: 30px;
     margin-bottom: 30px;
+    box-shadow: 5px 5px 5px hsl(0deg, 0%, 92%);
+  }
+  .exploration .exploration-content .exploration-content__btn:hover {
+    filter: brightness(1.15);
+    cursor: pointer;
+    box-shadow: 5px 5px 5px hsl(0deg, 0%, 21%);
   }
 
   .user-guide {
@@ -77,6 +87,9 @@
     margin: auto;
     margin-top: 30px;
     margin-bottom: 30px;
+  }
+  .user-guide h2 {
+    font-style: bold;
   }
   .user-guide .user-guide__container {
     display: flex;
@@ -96,6 +109,12 @@
     font-size: 20px;
     width: 50px;
     color: hsl(0deg, 0%, 21%);
+  }
+  .user-guide .user-guide__container .user-guide__card:active {
+    background-color: hsl(267deg, 100%, 96%);
+  }
+  .user-guide .user-guide__container .user-guide__card:active i {
+    color: #9356dc;
   }
   .user-guide .user-guide__container .user-guide__card .user-guide__number {
     font-size: 20px;
@@ -118,7 +137,7 @@
     width: 100%;
     background-color: hsl(0deg, 0%, 96%);
   }
-  .restaurant-list h1 {
+  .restaurant-list h2 {
     font-style: bold;
     padding-left: 5%;
     padding-top: 30px;
@@ -161,10 +180,11 @@
     padding-left: 10px;
   }
   .card-restaurant__link-content h4 {
-    margin-top: -20px;
+    margin-top: -4%;
   }
   .card-restaurant__link-content h5 {
-    margin-top: -10px;
+    font-weight: 400;
+    margin-top: -4%;
   }
 
   .card-restaurant__link-new {
@@ -204,7 +224,7 @@
   }
   .footer h2 {
     font-size: 16px;
-    font-weight: 200;
+    font-weight: 400;
     font-family: Shrikhand;
     color: rgb(255, 255, 255);
   }
@@ -217,6 +237,7 @@
     line-height: 1.5;
   }
   .footer ul a {
+    font-weight: 600;
     color: rgb(255, 255, 255);
     text-decoration: none;
     opacity: 1;
