--- a/sass/menu-style.scss
+++ b/sass/menu-style.scss
@@ -1,7 +1,7 @@
 @import "./variables";
 @import "./_media";
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: $breakpoints-tablet) {
   body {
     width: 100%;
     height: 100%;
@@ -104,6 +104,7 @@
       margin-top: 30px;
       margin-bottom: 30px;
       &:hover {
+        filter: brightness(1.15);
         cursor: pointer;
       }
     }
