--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 @import "./variables";
 @import "./_media";
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: $breakpoints-tablet) {
   body {
     width: 100%;
     font-family: Roboto, Times New Roman, Times, serif;
@@ -37,6 +37,9 @@
       i {
         padding-right: 10px;
       }
+      p {
+        font-weight: 600;
+      }
     }
     .exploration-content {
       display: flex;
@@ -50,7 +53,7 @@
         text-align: center;
         align-items: center;
         justify-content: center;
-        font-weight: 400;
+        font-weight: 1000;
         font-size: $font-size-large;
         margin-top: 30px;
       }
@@ -58,9 +61,10 @@
         text-align: center;
         align-items: center;
         justify-content: center;
-        font-weight: 100;
+        font-weight: 400;
         font-style: normal;
         font-size: $font-size-large;
+        opacity: 0.6;
       }
       .exploration-content__btn {
         height: 50px;
@@ -75,6 +79,12 @@
         border: 0px transparent;
         margin-top: 30px;
         margin-bottom: 30px;
+        box-shadow: 5px 5px 5px $darkgray-color;
+        &:hover {
+          filter: brightness(1.15);
+          cursor: pointer;
+          box-shadow: 5px 5px 5px $dark-color;
+        }
       }
     }
   }
@@ -84,6 +94,9 @@
     margin: auto;
     margin-top: 30px;
     margin-bottom: 30px;
+    h2 {
+      font-style: bold;
+    }
     .user-guide__container {
       display: flex;
       flex-direction: column;
@@ -100,6 +113,13 @@
           font-size: $font-size-large;
           width: 50px;
           color: $dark-color;
+        }
+        &:active {
+          background-color: $primary-color-light;
+
+          i {
+            color: $primary-color;
+          }
         }
         .user-guide__number {
           font-size: $font-size-large;
@@ -124,7 +144,7 @@
   .restaurant-list {
     width: 100%;
     background-color: $lightgray-color;
-    h1 {
+    h2 {
       font-style: bold;
       padding-left: 5%;
       padding-top: 30px;
@@ -163,10 +183,11 @@
     height: 30%;
     padding-left: 10px;
     h4 {
-      margin-top: -20px;
+      margin-top: -4%;
     }
     h5 {
-      margin-top: -10px;
+      font-weight: 400;
+      margin-top: -4%;
     }
   }
   .card-restaurant__link-new {
@@ -204,7 +225,7 @@
     padding: 10px;
     h2 {
       font-size: $font-size-medium;
-      font-weight: 200;
+      font-weight: 400;
       font-family: Shrikhand;
       color: $white-color;
     }
@@ -216,6 +237,7 @@
       padding: 0;
       line-height: 1.5;
       a {
+        font-weight: 600;
         color: $white-color;
         text-decoration: none;
         opacity: 1;
