--- a/src/css/menu-style-desktop.css
+++ b/src/css/menu-style-desktop.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 992px) {
   body {
     width: 100%;
     height: 100%;
@@ -26,8 +26,9 @@
     font-size: 40px;
   }
   .main .header__img {
-    height: 250px;
+    height: 550px;
     width: 100%;
+    overflow: hidden;
   }
   .main .header__img .header__img-style {
     object-fit: cover;
@@ -67,7 +68,12 @@
     height: 26px;
     font-weight: 400;
   }
-  .menu .menu__card {
+  .menu .menu__container-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .menu .menu__container-cards .menu__card {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
@@ -77,21 +83,22 @@
     height: 70px;
     justify-content: space-between;
     padding-right: 10px;
+    width: 30%;
   }
-  .menu .menu__card:last-child {
+  .menu .menu__container-cards .menu__card:last-child {
     margin: 0;
   }
-  .menu .menu__card .menu__card-text {
+  .menu .menu__container-cards .menu__card .menu__card-text {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-left: 10px;
   }
-  .menu .menu__card .menu__card-text h4 {
+  .menu .menu__container-cards .menu__card .menu__card-text h4 {
     margin: 0;
     padding: 2px;
   }
-  .menu .menu__card .menu__card-text p {
+  .menu .menu__container-cards .menu__card .menu__card-text p {
     padding: 2px;
     margin: 0;
   }
@@ -113,8 +120,9 @@
     background-color: #f5f5f5;
   }
   .section-menu__btn .menu__btn {
+    font-size: 24px;
     height: 50px;
-    width: 50%;
+    width: 30%;
     border-radius: 24px 24px 24px 24px;
     background: linear-gradient(to top left, #9356dc, #ff79da);
     color: #ffffff;
@@ -131,32 +139,37 @@
     padding: 10px;
   }
   .footer h2 {
-    font-size: 16px;
-    font-weight: 200;
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: 400;
     font-family: Shrikhand;
     color: #ffffff;
   }
   .footer .footer__container {
     padding-left: 20px;
   }
-  .footer ul {
+  .footer .footer-ul {
+    display: flex;
+    justify-content: space-around;
     list-style-type: none;
     padding: 0;
     line-height: 1.5;
   }
-  .footer ul a {
+  .footer .footer-ul .footer-ul__li-a {
+    font-weight: 600;
     color: #ffffff;
     text-decoration: none;
     opacity: 1;
   }
-  .footer ul a:hover {
+  .footer .footer-ul .footer-ul__li-a:hover {
     opacity: 0.8;
   }
-  .footer i {
+  .footer .footer-ul__li-icon {
     width: 12px;
     margin-right: 10px;
     color: #ffffff;
   }
 }
 
-/*# sourceMappingURL=menu-style.css.map */
+/*# sourceMappingURL=menu-style-desktop.css.map */
