--- a/src/css/style.desktop.css
+++ b/src/css/style.desktop.css
@@ -1,16 +1,21 @@
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 992px) {
   body {
     width: 100%;
     font-family: Roboto, Times New Roman, Times, serif;
     background-color: #f5f5f5;
   }
+  .main {
+    display: flex;
+    flex-direction: column-reverse;
+  }
   .header {
     width: 100%;
-    height: 60px;
+    height: 160px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #ffffff;
+    padding-top: 1%;
   }
   .header i {
     font-size: 28px;
@@ -20,22 +25,26 @@
   .header .size-logo {
     display: flex;
     width: 50%;
-    height: 40px;
+    height: 140px;
   }
   .exploration {
+    display: flex;
+    flex-direction: column-reverse;
     background-color: #f5f5f5;
   }
   .exploration .location {
-    height: 50px;
+    height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #ebebeb;
   }
   .exploration .location i {
+    font-size: 24px;
     padding-right: 10px;
   }
   .exploration .location p {
+    font-size: 24px;
     font-weight: 600;
   }
   .exploration .exploration-content {
@@ -52,7 +61,7 @@
     align-items: center;
     justify-content: center;
     font-weight: 1000;
-    font-size: 20px;
+    font-size: 24px;
     margin-top: 30px;
   }
   .exploration .exploration-content h2 {
@@ -61,45 +70,47 @@
     justify-content: center;
     font-weight: 400;
     font-style: normal;
-    font-size: 20px;
+    font-size: 24px;
     opacity: 0.6;
   }
   .exploration .exploration-content .exploration-content__btn {
-    height: 50px;
-    width: 65%;
+    font-size: 24px;
+    height: 60px;
+    width: 40%;
     border-radius: 24px 24px 24px 24px;
     background: linear-gradient(to top left, #9356dc, #ff79da);
     color: #ffffff;
     border: 0px transparent;
     margin-top: 30px;
     margin-bottom: 30px;
-    box-shadow: 5px 5px 5px #ebebeb;
+    box-shadow: 1px 0px 0px #ebebeb;
   }
   .exploration .exploration-content .exploration-content__btn:hover {
-    filter: brightness(1.15);
+    filter: brightness(1.1);
     cursor: pointer;
     box-shadow: 5px 5px 5px #363636;
   }
   .user-guide {
-    background-color: #ffffff;
-    padding: 5%;
-    margin: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    background-color: #ebebeb;
+    margin: 0;
   }
   .user-guide h2 {
-    margin-left: 1%;
+    display: flex;
+    justify-content: center;
+    margin: 0;
     font-style: bold;
-    font-size: 24px;
+    font-size: 30px;
+    margin: 20px 0px 20px 0px;
   }
   .user-guide .user-guide__container {
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
   }
   .user-guide .user-guide__container .user-guide__card {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    width: 30%;
+    margin-bottom: 4%;
     background-color: #f5f5f5;
     border-radius: 16px 16px 16px 16px;
     box-shadow: 4px 4px 6px #f5f5f5;
@@ -129,37 +140,43 @@
     background-color: #9356dc;
   }
   .user-guide .user-guide__container .user-guide__card .user-guide__text {
-    font-size: 20px;
+    font-size: 16px;
     font-style: bold;
-    font-weight: 700;
+    font-weight: 800;
+    padding-left: 4%;
   }
   .restaurant-list {
     background-color: #f5f5f5;
   }
   .restaurant-list h2 {
-    font-size: 24px;
+    font-size: 30px;
     font-style: bold;
-    margin-left: 5%;
-    margin-bottom: 7%;
-    padding-top: 11%;
+    display: flex;
+    justify-content: center;
   }
   .restaurant-list .restaurant-list-container {
     width: 92%;
     margin: auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
   }
   .restaurant-list .restaurant-list-container .card-restaurant {
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
-    width: 100%;
-    height: 230px;
+    width: 40%;
+    height: 300px;
     margin-bottom: 5%;
     text-decoration: none;
     color: inherit;
     border-radius: 16px 16px 16px 16px;
+    transform: scale(1);
+    transition-property: transform;
+    transition-duration: 800ms;
   }
-  .restaurant-list .restaurant-list-container .card-restaurant:last-child {
-    margin-bottom: 0;
+  .restaurant-list .restaurant-list-container .card-restaurant:hover {
+    transform: scale(1.17);
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__header {
     height: 70%;
@@ -168,9 +185,9 @@
     overflow: hidden;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__header .card-restaurant__header-img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 16px 16px 0px 0px;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__content {
@@ -192,7 +209,7 @@
     font-weight: 400;
   }
   .restaurant-list .card-restaurant.new .card-restaurant__header::after {
-    font-size: 12px;
+    font-size: 24px;
     content: "Nouveau";
     position: absolute;
     padding: 6px 10px;
@@ -202,12 +219,13 @@
     top: 6%;
   }
   .footer {
-    margin-top: 15%;
     background-color: #363636;
     padding: 10px;
   }
   .footer h2 {
-    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
     font-weight: 400;
     font-family: Shrikhand;
     color: #ffffff;
@@ -215,25 +233,27 @@
   .footer .footer__container {
     padding-left: 20px;
   }
-  .footer ul {
+  .footer .footer-ul {
+    display: flex;
+    justify-content: space-around;
     list-style-type: none;
     padding: 0;
     line-height: 1.5;
   }
-  .footer ul a {
+  .footer .footer-ul .footer-ul__li-a {
     font-weight: 600;
     color: #ffffff;
     text-decoration: none;
     opacity: 1;
   }
-  .footer ul a:hover {
+  .footer .footer-ul .footer-ul__li-a:hover {
     opacity: 0.8;
   }
-  .footer i {
+  .footer .footer-ul__li-icon {
     width: 12px;
     margin-right: 10px;
     color: #ffffff;
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.desktop.css.map */
