--- a/src/css/style.tablet.css
+++ b/src/css/style.tablet.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 992px) {
   body {
     width: 100%;
     font-family: Roboto, Times New Roman, Times, serif;
@@ -6,7 +6,7 @@
   }
   .header {
     width: 100%;
-    height: 60px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,10 +20,10 @@
   .header .size-logo {
     display: flex;
     width: 50%;
-    height: 40px;
+    height: 80px;
   }
   .exploration {
-    background-color: #f5f5f5;
+    background-color: #ffffff;
   }
   .exploration .location {
     height: 50px;
@@ -65,39 +65,48 @@
     opacity: 0.6;
   }
   .exploration .exploration-content .exploration-content__btn {
-    height: 50px;
-    width: 65%;
+    height: 70px;
+    width: 50%;
     border-radius: 24px 24px 24px 24px;
     background: linear-gradient(to top left, #9356dc, #ff79da);
     color: #ffffff;
     border: 0px transparent;
     margin-top: 30px;
     margin-bottom: 30px;
-    box-shadow: 5px 5px 5px #ebebeb;
+    box-shadow: 5px 5px 5px #f5f5f5;
   }
   .exploration .exploration-content .exploration-content__btn:hover {
-    filter: brightness(1.15);
+    filter: brightness(1.1);
     cursor: pointer;
-    box-shadow: 5px 5px 5px #363636;
+    box-shadow: 15px 15px 15px #ebebeb;
+  }
+  .main {
+    display: flex;
+    flex-direction: column-reverse;
+    background-color: #ffffff;
   }
   .user-guide {
     background-color: #ffffff;
-    padding: 5%;
+    padding: 1%;
     margin: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
   }
   .user-guide h2 {
-    margin-left: 1%;
+    display: flex;
+    justify-content: center;
     font-style: bold;
-    font-size: 24px;
+    font-size: 40px;
+    margin-bottom: 28px;
   }
   .user-guide .user-guide__container {
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    text-align: center;
+    justify-content: space-around;
   }
   .user-guide .user-guide__container .user-guide__card {
     display: flex;
+    padding: 20px;
     align-items: center;
     margin-bottom: 20px;
     background-color: #f5f5f5;
@@ -105,6 +114,8 @@
     box-shadow: 4px 4px 6px #f5f5f5;
     border: 0px transparent;
     height: 80px;
+    width: 38%;
+    padding: 50px;
   }
   .user-guide .user-guide__container .user-guide__card i {
     font-size: 20px;
@@ -137,29 +148,28 @@
     background-color: #f5f5f5;
   }
   .restaurant-list h2 {
-    font-size: 24px;
+    font-size: 40px;
     font-style: bold;
-    margin-left: 5%;
-    margin-bottom: 7%;
-    padding-top: 11%;
+    display: flex;
+    justify-content: center;
   }
   .restaurant-list .restaurant-list-container {
     width: 92%;
     margin: auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
   }
   .restaurant-list .restaurant-list-container .card-restaurant {
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
-    width: 100%;
-    height: 230px;
+    width: 40%;
+    height: 300px;
     margin-bottom: 5%;
     text-decoration: none;
     color: inherit;
     border-radius: 16px 16px 16px 16px;
-  }
-  .restaurant-list .restaurant-list-container .card-restaurant:last-child {
-    margin-bottom: 0;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__header {
     height: 70%;
@@ -168,9 +178,9 @@
     overflow: hidden;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__header .card-restaurant__header-img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
-    object-fit: cover;
+    object-fit: contain;
     border-radius: 16px 16px 0px 0px;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__content {
@@ -192,7 +202,7 @@
     font-weight: 400;
   }
   .restaurant-list .card-restaurant.new .card-restaurant__header::after {
-    font-size: 12px;
+    font-size: 20px;
     content: "Nouveau";
     position: absolute;
     padding: 6px 10px;
@@ -202,12 +212,13 @@
     top: 6%;
   }
   .footer {
-    margin-top: 15%;
     background-color: #363636;
     padding: 10px;
   }
   .footer h2 {
-    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
     font-weight: 400;
     font-family: Shrikhand;
     color: #ffffff;
@@ -215,25 +226,27 @@
   .footer .footer__container {
     padding-left: 20px;
   }
-  .footer ul {
+  .footer .footer-ul {
+    display: flex;
+    justify-content: space-around;
     list-style-type: none;
     padding: 0;
     line-height: 1.5;
   }
-  .footer ul a {
+  .footer .footer-ul .footer-ul__li-a {
     font-weight: 600;
     color: #ffffff;
     text-decoration: none;
     opacity: 1;
   }
-  .footer ul a:hover {
+  .footer .footer-ul .footer-ul__li-a:hover {
     opacity: 0.8;
   }
-  .footer i {
+  .footer .footer-ul__li-icon {
     width: 12px;
     margin-right: 10px;
     color: #ffffff;
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.tablet.css.map */
