--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,13 +1,13 @@
-// variable :
+// variables :
 // color
 $primary-color: #9356dc;
 $primary-color-light: #f5edff;
 $secondary-color: #ff79da;
 $tertiary-color: #99e2d0;
-$dark-color: hsl(0deg 0% 21%);
-$white-color: rgb(255, 255, 255);
-$darkgray-color: hsl(0deg 0% 92%);
-$lightgray-color: hsl(0deg 0% 96%);
+$dark-color: #363636;
+$white-color: #ffffff;
+$darkgray-color: #ebebeb;
+$lightgray-color: #f5f5f5;
 $new-btn-text-color: #159375;
 
 // font-size
