--- a/src/sass/menu-style-desktop.scss
+++ b/src/sass/menu-style-desktop.scss
@@ -1,6 +1,6 @@
 @import "./variables";
 
-@media screen and (max-width: $breakpoints-tablet) {
+@media screen and (min-width: $breakpoints-desktop) {
   body {
     width: 100%;
     height: 100%;
@@ -31,8 +31,9 @@
   //  main image
   .main {
     .header__img {
-      height: 250px;
+      height: 550px;
       width: 100%;
+      overflow: hidden;
       .header__img-style {
         object-fit: cover;
         height: auto;
@@ -76,31 +77,37 @@
       height: 40px;
       border-bottom: 2x solid $tertiary-color;
     }
-    .menu__card {
+    .menu__container-cards {
       display: flex;
-      align-items: center;
-      margin-bottom: 20px;
-      background-color: $white-color;
-      border-radius: 16px 16px 16px 16px;
-      box-shadow: 4px 4px 6px $lightgray-color;
-      height: 70px;
+      flex-direction: row;
       justify-content: space-between;
-      padding-right: 10px;
-      &:last-child {
-        margin: 0;
-      }
-      .menu__card-text {
+      .menu__card {
         display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding-left: 10px;
-        h4 {
+        align-items: center;
+        margin-bottom: 20px;
+        background-color: $white-color;
+        border-radius: 16px 16px 16px 16px;
+        box-shadow: 4px 4px 6px $lightgray-color;
+        height: 70px;
+        justify-content: space-between;
+        padding-right: 10px;
+        width: 30%;
+        &:last-child {
           margin: 0;
-          padding: 2px;
         }
-        p {
-          padding: 2px;
-          margin: 0;
+        .menu__card-text {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          padding-left: 10px;
+          h4 {
+            margin: 0;
+            padding: 2px;
+          }
+          p {
+            padding: 2px;
+            margin: 0;
+          }
         }
       }
     }
@@ -123,8 +130,9 @@
     justify-content: center;
     background-color: $lightgray-color;
     .menu__btn {
+      font-size: $font-size-xlarge;
       height: 50px;
-      width: 50%;
+      width: 30%;
       border-radius: 24px 24px 24px 24px;
       background: linear-gradient(
         to top left,
@@ -141,24 +149,29 @@
       }
     }
   }
-  //   footer
+  // footer
   .footer {
     background-color: $dark-color;
     padding: 10px;
     h2 {
-      font-size: $font-size-medium;
-      font-weight: 200;
+      display: flex;
+      justify-content: center;
+      font-size: $font-size-xlarge;
+      font-weight: 400;
       font-family: Shrikhand;
       color: $white-color;
     }
     .footer__container {
       padding-left: 20px;
     }
-    ul {
+    .footer-ul {
+      display: flex;
+      justify-content: space-around;
       list-style-type: none;
       padding: 0;
       line-height: 1.5;
-      a {
+      .footer-ul__li-a {
+        font-weight: 600;
         color: $white-color;
         text-decoration: none;
         opacity: 1;
@@ -167,7 +180,7 @@
         }
       }
     }
-    i {
+    .footer-ul__li-icon {
       width: 12px;
       margin-right: 10px;
       color: $white-color;
