--- a/src/sass/menu-style-tablet.scss
+++ b/src/sass/menu-style-tablet.scss
@@ -1,6 +1,6 @@
 @import "./variables";
 
-@media screen and (max-width: $breakpoints-tablet) {
+@media screen and (min-width: $breakpoints-tablet) and (max-width: $breakpoints-desktop) {
   body {
     width: 100%;
     height: 100%;
@@ -31,7 +31,7 @@
   //  main image
   .main {
     .header__img {
-      height: 250px;
+      height: 350px;
       width: 100%;
       .header__img-style {
         object-fit: cover;
@@ -141,24 +141,29 @@
       }
     }
   }
-  //   footer
+  // footer
   .footer {
     background-color: $dark-color;
     padding: 10px;
     h2 {
-      font-size: $font-size-medium;
-      font-weight: 200;
+      display: flex;
+      justify-content: center;
+      font-size: $font-size-xlarge;
+      font-weight: 400;
       font-family: Shrikhand;
       color: $white-color;
     }
     .footer__container {
       padding-left: 20px;
     }
-    ul {
+    .footer-ul {
+      display: flex;
+      justify-content: space-around;
       list-style-type: none;
       padding: 0;
       line-height: 1.5;
-      a {
+      .footer-ul__li-a {
+        font-weight: 600;
         color: $white-color;
         text-decoration: none;
         opacity: 1;
@@ -167,7 +172,7 @@
         }
       }
     }
-    i {
+    .footer-ul__li-icon {
       width: 12px;
       margin-right: 10px;
       color: $white-color;
