--- a/src/sass/style.desktop.scss
+++ b/src/sass/style.desktop.scss
@@ -1,18 +1,23 @@
 @import "./variables";
 
-@media screen and (max-width: $breakpoints-tablet) {
+@media screen and (min-width: $breakpoints-desktop) {
   body {
     width: 100%;
     font-family: Roboto, Times New Roman, Times, serif;
     background-color: $lightgray-color;
   }
+  .main {
+    display: flex;
+    flex-direction: column-reverse;
+  }
   .header {
     width: 100%;
-    height: 60px;
+    height: 160px;
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: $white-color;
+    padding-top: 1%;
     i {
       font-size: 28px;
       position: relative;
@@ -21,23 +26,27 @@
     .size-logo {
       display: flex;
       width: 50%;
-      height: 40px;
+      height: 140px;
     }
   }
   //  exploration
 
   .exploration {
+    display: flex;
+    flex-direction: column-reverse;
     background-color: $lightgray-color;
     .location {
-      height: 50px;
+      height: 80px;
       display: flex;
       justify-content: center;
       align-items: center;
       background-color: $darkgray-color;
       i {
+        font-size: $font-size-xlarge;
         padding-right: 10px;
       }
       p {
+        font-size: $font-size-xlarge;
         font-weight: 600;
       }
     }
@@ -54,7 +63,7 @@
         align-items: center;
         justify-content: center;
         font-weight: 1000;
-        font-size: $font-size-large;
+        font-size: $font-size-xlarge;
         margin-top: 30px;
       }
       h2 {
@@ -63,12 +72,13 @@
         justify-content: center;
         font-weight: 400;
         font-style: normal;
-        font-size: $font-size-large;
+        font-size: $font-size-xlarge;
         opacity: 0.6;
       }
       .exploration-content__btn {
-        height: 50px;
-        width: 65%;
+        font-size: $font-size-xlarge;
+        height: 60px;
+        width: 40%;
         border-radius: 24px 24px 24px 24px;
         background: linear-gradient(
           to top left,
@@ -79,9 +89,9 @@
         border: 0px transparent;
         margin-top: 30px;
         margin-bottom: 30px;
-        box-shadow: 5px 5px 5px $darkgray-color;
+        box-shadow: 1px 0px 0px $darkgray-color;
         &:hover {
-          filter: brightness(1.15);
+          filter: brightness(1.1);
           cursor: pointer;
           box-shadow: 5px 5px 5px $dark-color;
         }
@@ -90,23 +100,24 @@
   }
   // user-guide
   .user-guide {
-    background-color: $white-color;
-    padding: 5%;
-    margin: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    background-color: $darkgray-color;
+    margin: 0;
     h2 {
-      margin-left: 1%;
+      display: flex;
+      justify-content: center;
+      margin: 0;
       font-style: bold;
-      font-size: $font-size-xlarge;
+      font-size: 30px;
+      margin: 20px 0px 20px 0px;
     }
     .user-guide__container {
       display: flex;
-      flex-direction: column;
+      justify-content: space-around;
       .user-guide__card {
         display: flex;
         align-items: center;
-        margin-bottom: 20px;
+        width: 30%;
+        margin-bottom: 4%;
         background-color: $lightgray-color;
         border-radius: 16px 16px 16px 16px;
         box-shadow: 4px 4px 6px $lightgray-color;
@@ -136,49 +147,56 @@
           background-color: $primary-color;
         }
         .user-guide__text {
-          font-size: $font-size-large;
+          font-size: $font-size-medium;
           font-style: bold;
-          font-weight: 700;
+          font-weight: 800;
+          padding-left: 4%;
         }
       }
     }
   }
-  //   restaurant-list
+  // restaurant
   .restaurant-list {
     background-color: $lightgray-color;
     h2 {
-      font-size: $font-size-xlarge;
+      font-size: 30px;
       font-style: bold;
-      margin-left: 5%;
-      margin-bottom: 7%;
-      padding-top: 11%;
+      display: flex;
+      justify-content: center;
     }
     .restaurant-list-container {
       width: 92%;
       margin: auto;
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
 
       .card-restaurant {
         display: flex;
         flex-direction: column;
         background-color: $white-color;
-        width: 100%;
-        height: 230px;
+        width: 40%;
+        height: 300px;
         margin-bottom: 5%;
         text-decoration: none;
         color: inherit;
         border-radius: 16px 16px 16px 16px;
-        &:last-child {
-          margin-bottom: 0;
+        transform: scale(1);
+        transition-property: transform;
+        transition-duration: 800ms;
+        &:hover {
+          transform: scale(1.17);
         }
+
         .card-restaurant__header {
           height: 70%;
           background-size: cover;
           position: relative;
           overflow: hidden;
           .card-restaurant__header-img {
-            width: 100%;
+            max-width: 100%;
             height: auto;
-            object-fit: cover;
+            object-fit: contain;
             border-radius: 16px 16px 0px 0px;
           }
         }
@@ -203,7 +221,7 @@
       }
     }
     .card-restaurant.new .card-restaurant__header::after {
-      font-size: $font-size-small;
+      font-size: $font-size-xlarge;
       content: "Nouveau";
       position: absolute;
       padding: 6px 10px;
@@ -215,11 +233,12 @@
   }
   // footer
   .footer {
-    margin-top: 15%;
     background-color: $dark-color;
     padding: 10px;
     h2 {
-      font-size: $font-size-medium;
+      display: flex;
+      justify-content: center;
+      font-size: $font-size-xlarge;
       font-weight: 400;
       font-family: Shrikhand;
       color: $white-color;
@@ -227,11 +246,13 @@
     .footer__container {
       padding-left: 20px;
     }
-    ul {
+    .footer-ul {
+      display: flex;
+      justify-content: space-around;
       list-style-type: none;
       padding: 0;
       line-height: 1.5;
-      a {
+      .footer-ul__li-a {
         font-weight: 600;
         color: $white-color;
         text-decoration: none;
@@ -241,7 +262,7 @@
         }
       }
     }
-    i {
+    .footer-ul__li-icon {
       width: 12px;
       margin-right: 10px;
       color: $white-color;
