--- a/src/sass/style.tablet.scss
+++ b/src/sass/style.tablet.scss
@@ -1,6 +1,6 @@
 @import "./variables";
 
-@media screen and (max-width: $breakpoints-tablet) {
+@media screen and (min-width: $breakpoints-tablet) and (max-width: $breakpoints-desktop) {
   body {
     width: 100%;
     font-family: Roboto, Times New Roman, Times, serif;
@@ -8,7 +8,7 @@
   }
   .header {
     width: 100%;
-    height: 60px;
+    height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,13 +21,13 @@
     .size-logo {
       display: flex;
       width: 50%;
-      height: 40px;
+      height: 80px;
     }
   }
   //  exploration
 
   .exploration {
-    background-color: $lightgray-color;
+    background-color: $white-color;
     .location {
       height: 50px;
       display: flex;
@@ -67,8 +67,8 @@
         opacity: 0.6;
       }
       .exploration-content__btn {
-        height: 50px;
-        width: 65%;
+        height: 70px;
+        width: 50%;
         border-radius: 24px 24px 24px 24px;
         background: linear-gradient(
           to top left,
@@ -79,32 +79,43 @@
         border: 0px transparent;
         margin-top: 30px;
         margin-bottom: 30px;
-        box-shadow: 5px 5px 5px $darkgray-color;
+        box-shadow: 5px 5px 5px $lightgray-color;
         &:hover {
-          filter: brightness(1.15);
+          filter: brightness(1.1);
           cursor: pointer;
-          box-shadow: 5px 5px 5px $dark-color;
+          box-shadow: 15px 15px 15px $darkgray-color;
         }
       }
     }
   }
+  //   main (user guide + restaurants)
+  .main {
+    display: flex;
+    flex-direction: column-reverse;
+    background-color: $white-color;
+  }
   // user-guide
   .user-guide {
     background-color: $white-color;
-    padding: 5%;
+    padding: 1%;
     margin: auto;
-    margin-top: 30px;
-    margin-bottom: 30px;
     h2 {
-      margin-left: 1%;
+      display: flex;
+      justify-content: center;
       font-style: bold;
-      font-size: $font-size-xlarge;
+      font-size: 40px;
+      margin-bottom: 28px;
     }
     .user-guide__container {
       display: flex;
-      flex-direction: column;
+      align-items: center;
+      flex-wrap: wrap;
+      text-align: center;
+      justify-content: space-around;
+
       .user-guide__card {
         display: flex;
+        padding: 20px;
         align-items: center;
         margin-bottom: 20px;
         background-color: $lightgray-color;
@@ -112,6 +123,8 @@
         box-shadow: 4px 4px 6px $lightgray-color;
         border: 0px transparent;
         height: 80px;
+        width: 38%;
+        padding: 50px;
         i {
           font-size: $font-size-large;
           width: 50px;
@@ -143,42 +156,42 @@
       }
     }
   }
-  //   restaurant-list
+  // restaurant
   .restaurant-list {
     background-color: $lightgray-color;
     h2 {
-      font-size: $font-size-xlarge;
+      font-size: 40px;
       font-style: bold;
-      margin-left: 5%;
-      margin-bottom: 7%;
-      padding-top: 11%;
+      display: flex;
+      justify-content: center;
     }
     .restaurant-list-container {
       width: 92%;
       margin: auto;
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
 
       .card-restaurant {
         display: flex;
         flex-direction: column;
         background-color: $white-color;
-        width: 100%;
-        height: 230px;
+        width: 40%;
+        height: 300px;
         margin-bottom: 5%;
         text-decoration: none;
         color: inherit;
         border-radius: 16px 16px 16px 16px;
-        &:last-child {
-          margin-bottom: 0;
-        }
+
         .card-restaurant__header {
           height: 70%;
           background-size: cover;
           position: relative;
           overflow: hidden;
           .card-restaurant__header-img {
-            width: 100%;
+            max-width: 100%;
             height: auto;
-            object-fit: cover;
+            object-fit: contain;
             border-radius: 16px 16px 0px 0px;
           }
         }
@@ -203,7 +216,7 @@
       }
     }
     .card-restaurant.new .card-restaurant__header::after {
-      font-size: $font-size-small;
+      font-size: $font-size-large;
       content: "Nouveau";
       position: absolute;
       padding: 6px 10px;
@@ -215,11 +228,12 @@
   }
   // footer
   .footer {
-    margin-top: 15%;
     background-color: $dark-color;
     padding: 10px;
     h2 {
-      font-size: $font-size-medium;
+      display: flex;
+      justify-content: center;
+      font-size: $font-size-xlarge;
       font-weight: 400;
       font-family: Shrikhand;
       color: $white-color;
@@ -227,11 +241,13 @@
     .footer__container {
       padding-left: 20px;
     }
-    ul {
+    .footer-ul {
+      display: flex;
+      justify-content: space-around;
       list-style-type: none;
       padding: 0;
       line-height: 1.5;
-      a {
+      .footer-ul__li-a {
         font-weight: 600;
         color: $white-color;
         text-decoration: none;
@@ -241,7 +257,7 @@
         }
       }
     }
-    i {
+    .footer-ul__li-icon {
       width: 12px;
       margin-right: 10px;
       color: $white-color;
