--- a/src/css/menu-style-desktop.css
+++ b/src/css/menu-style-desktop.css
@@ -1,3 +1,27 @@
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes slideleft {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 20%;
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 @media screen and (min-width: 992px) {
   body {
     width: 100%;
@@ -82,35 +106,99 @@
     box-shadow: 4px 4px 6px #f5f5f5;
     height: 70px;
     justify-content: space-between;
-    padding-right: 10px;
     width: 30%;
+  }
+  .menu .menu__container-cards .menu__card:nth-child(1n) {
+    transition: 0.5s;
+    animation: fadein 1s;
+  }
+  .menu .menu__container-cards .menu__card:nth-child(2n) {
+    transition: 0.5s;
+    animation: fadein 2s;
+  }
+  .menu .menu__container-cards .menu__card:nth-child(3n) {
+    transition: 0.5s;
+    animation: fadein 3s;
   }
   .menu .menu__container-cards .menu__card:last-child {
     margin: 0;
   }
-  .menu .menu__container-cards .menu__card .menu__card-text {
+  .menu .menu__container-cards .menu__card .check-box {
+    width: 20%;
+    height: 100%;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    background-color: #99e2d0;
+    border-radius: 0 16px 16px 0;
+    animation: slideleft 0.5s;
+  }
+  .menu .menu__container-cards .menu__card .check-box i {
+    animation: spin 0.5s;
+    font-size: 24px;
+    color: #ffffff;
+  }
+  .menu .menu__container-cards .menu__card:hover {
+    cursor: pointer;
+  }
+  .menu .menu__container-cards .menu__card:hover .menu__card-text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+  .menu .menu__container-cards .menu__card:hover .menu__card-price {
+    margin: 0;
+  }
+  .menu .menu__container-cards .menu__card:hover .check-box {
+    width: 20%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #99e2d0;
+    border-radius: 0 16px 16px 0;
+  }
+  .menu .menu__container-cards .menu__card:hover .check-box i {
+    font-size: 24px;
+    color: #ffffff;
+  }
+  .menu .menu__container-cards .menu__card-text {
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-left: 10px;
+    width: 80%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
-  .menu .menu__container-cards .menu__card .menu__card-text h4 {
+  .menu .menu__container-cards .menu__card-text h4 {
+    overflow: hidden;
+    width: 100%;
+    text-overflow: ellipsis;
     margin: 0;
     padding: 2px;
   }
-  .menu .menu__container-cards .menu__card .menu__card-text p {
+  .menu .menu__container-cards .menu__card-text p {
+    overflow: hidden;
+    width: 100%;
+    text-overflow: ellipsis;
     padding: 2px;
     margin: 0;
+    text-overflow: ellipsis;
   }
-  .menu .starter {
+  .menu .menu__container-cards .menu__card-price {
+    width: 15%;
+  }
+  .starter {
     width: 92%;
     margin: auto;
   }
-  .menu .dish {
+  .dish {
     width: 92%;
     margin: auto;
   }
-  .menu .dessert {
+  .dessert {
     width: 92%;
     margin: auto;
   }
@@ -122,7 +210,7 @@
   .section-menu__btn .menu__btn {
     font-size: 24px;
     height: 50px;
-    width: 30%;
+    width: 20%;
     border-radius: 24px 24px 24px 24px;
     background: linear-gradient(to top left, #9356dc, #ff79da);
     color: #ffffff;
