--- a/src/sass/menu-style-desktop.scss
+++ b/src/sass/menu-style-desktop.scss
@@ -1,4 +1,5 @@
 @import "./variables";
+@import "./keyframes";
 
 @media screen and (min-width: $breakpoints-desktop) {
   body {
@@ -90,40 +91,105 @@
         box-shadow: 4px 4px 6px $lightgray-color;
         height: 70px;
         justify-content: space-between;
-        padding-right: 10px;
         width: 30%;
+        &:nth-child(1n) {
+          transition: 0.5s;
+          animation: fadein 1s;
+        }
+        &:nth-child(2n) {
+          transition: 0.5s;
+          animation: fadein 2s;
+        }
+        &:nth-child(3n) {
+          transition: 0.5s;
+          animation: fadein 3s;
+        }
         &:last-child {
           margin: 0;
         }
-        .menu__card-text {
-          display: flex;
-          flex-direction: column;
+        .check-box {
+          width: 20%;
+          height: 100%;
+          display: none;
+          align-items: center;
           justify-content: center;
-          padding-left: 10px;
-          h4 {
-            margin: 0;
-            padding: 2px;
+          background-color: $tertiary-color;
+          border-radius: 0 16px 16px 0;
+          animation: slideleft 0.5s;
+          i {
+            animation: spin 0.5s;
+            font-size: $font-size-xlarge;
+            color: $white-color;
           }
-          p {
-            padding: 2px;
+        }
+        &:hover {
+          cursor: pointer;
+          .menu__card-text {
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            text-overflow: ellipsis;
+          }
+          .menu__card-price {
             margin: 0;
+          }
+          .check-box {
+            width: 20%;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: $tertiary-color;
+            border-radius: 0 16px 16px 0;
+            i {
+              font-size: $font-size-xlarge;
+              color: $white-color;
+            }
           }
         }
       }
-    }
-    .starter {
-      width: 92%;
-      margin: auto;
-    }
-    .dish {
-      width: 92%;
-      margin: auto;
-    }
-    .dessert {
-      width: 92%;
-      margin: auto;
+      .menu__card-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding-left: 10px;
+        width: 80%;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        h4 {
+          overflow: hidden;
+          width: 100%;
+          text-overflow: ellipsis;
+          margin: 0;
+          padding: 2px;
+        }
+        p {
+          overflow: hidden;
+          width: 100%;
+          text-overflow: ellipsis;
+          padding: 2px;
+          margin: 0;
+          text-overflow: ellipsis;
+        }
+      }
+      .menu__card-price {
+        width: 15%;
+      }
     }
   }
+  .starter {
+    width: 92%;
+    margin: auto;
+  }
+  .dish {
+    width: 92%;
+    margin: auto;
+  }
+  .dessert {
+    width: 92%;
+    margin: auto;
+  }
+
   // btn
   .section-menu__btn {
     display: flex;
@@ -132,7 +198,7 @@
     .menu__btn {
       font-size: $font-size-xlarge;
       height: 50px;
-      width: 30%;
+      width: 20%;
       border-radius: 24px 24px 24px 24px;
       background: linear-gradient(
         to top left,
