--- a/src/sass/_keyframes.scss
+++ b/src/sass/_keyframes.scss
@@ -1,13 +1,23 @@
+// @keyframes fadein {
+//   from {
+//     opacity: 0;
+//   }
+//   to {
+//     opacity: 1;
+//   }
+// }
 @keyframes fadein {
-  from {
+  0% {
+    transform: translateY(20px);
     opacity: 0;
   }
-  to {
+
+  100% {
+    transform: translateY(0px);
     opacity: 1;
   }
 }
-
-@keyframes slideleft {
+@keyframes slide {
   0% {
     width: 0%;
   }
