--- a/src/sass/menu-style-tablet.scss
+++ b/src/sass/menu-style-tablet.scss
@@ -16,10 +16,11 @@
     justify-content: center;
     align-items: center;
     background-color: $white-color;
-    i {
+    a {
       font-size: 28px;
       position: relative;
-      right: 60px;
+      right: 33%;
+      color: black;
     }
     h1 {
       position: relative;
@@ -59,8 +60,35 @@
         font-weight: 100;
         font-family: Shrikhand;
       }
-      i {
-        padding-top: 2%;
+      .menu-main-title__btn {
+        border: none;
+        background-color: $lightgray-color;
+        cursor: pointer;
+        background-clip: text;
+        .menu-main-title__btn-icon-fill {
+          display: none;
+          background-image: linear-gradient(
+            200deg,
+            $primary-color,
+            $secondary-color
+          );
+          background-clip: text;
+          -webkit-background-clip: text;
+          color: transparent;
+          font-size: $font-size-xlarge;
+        }
+        .menu-main-title__btn-icon-umpty {
+          font-size: $font-size-xlarge;
+          font-weight: 100;
+        }
+        &:hover {
+          .menu-main-title__btn-icon-fill {
+            display: flex;
+          }
+          .menu-main-title__btn-icon-umpty {
+            display: none;
+          }
+        }
       }
     }
     .menu__title {
