--- a/src/sass/menu-style.scss
+++ b/src/sass/menu-style.scss
@@ -16,10 +16,11 @@
     justify-content: center;
     align-items: center;
     background-color: $white-color;
-    i {
-      font-size: 28px;
+    a {
+      font-size: 24px;
       position: relative;
-      right: 60px;
+      right: 8%;
+      color: black;
     }
     h1 {
       position: relative;
@@ -59,8 +60,35 @@
         font-weight: 100;
         font-family: Shrikhand;
       }
-      i {
-        padding-top: 2%;
+      .menu-main-title__btn {
+        border: none;
+        background-color: $lightgray-color;
+        cursor: pointer;
+        background-clip: text;
+        .menu-main-title__btn-icon-fill {
+          display: none;
+          background-image: linear-gradient(
+            200deg,
+            $primary-color,
+            $secondary-color
+          );
+          background-clip: text;
+          -webkit-background-clip: text;
+          color: transparent;
+          font-size: $font-size-xlarge;
+        }
+        .menu-main-title__btn-icon-umpty {
+          font-size: $font-size-xlarge;
+          font-weight: 100;
+        }
+        &:hover {
+          .menu-main-title__btn-icon-fill {
+            display: flex;
+          }
+          .menu-main-title__btn-icon-umpty {
+            display: none;
+          }
+        }
       }
     }
     .menu__title {
@@ -152,6 +180,7 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       h4 {
+        font-size: $font-size-medium;
         overflow: hidden;
         width: 100%;
         text-overflow: ellipsis;
@@ -159,6 +188,7 @@
         padding: 2px;
       }
       p {
+        font-size: $font-size-small;
         overflow: hidden;
         width: 100%;
         text-overflow: ellipsis;
