--- a/src/sass/style.desktop.scss
+++ b/src/sass/style.desktop.scss
@@ -19,11 +19,7 @@
     align-items: center;
     background-color: $white-color;
     padding-top: 1%;
-    i {
-      font-size: 28px;
-      position: relative;
-      right: 60px;
-    }
+
     .size-logo {
       display: flex;
       width: 50%;
@@ -196,6 +192,7 @@
           overflow: hidden;
           .card-restaurant__header-img {
             max-width: 100%;
+            height: 100%;
             height: auto;
             object-fit: contain;
             border-radius: 16px 16px 0px 0px;
@@ -216,6 +213,36 @@
               font-size: $font-size-medium;
               margin: 0;
               font-weight: 400;
+            }
+          }
+        }
+        .card-restaurant__btn {
+          border: none;
+          background-color: $white-color;
+          cursor: pointer;
+          background-clip: text;
+          .card-restaurant__btn-icon-fill {
+            display: none;
+            background-image: linear-gradient(
+              200deg,
+              $primary-color,
+              $secondary-color
+            );
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
+            font-size: $font-size-xlarge;
+          }
+          .card-restaurant__btn-icon-umpty {
+            font-size: $font-size-xlarge;
+            font-weight: 100;
+          }
+          &:hover {
+            .card-restaurant__btn-icon-fill {
+              display: flex;
+            }
+            .card-restaurant__btn-icon-umpty {
+              display: none;
             }
           }
         }
