--- a/src/sass/style.tablet.scss
+++ b/src/sass/style.tablet.scss
@@ -14,11 +14,7 @@
     justify-content: center;
     align-items: center;
     background-color: $white-color;
-    i {
-      font-size: 28px;
-      position: relative;
-      right: 60px;
-    }
+
     .size-logo {
       display: flex;
       width: 50%;
@@ -211,6 +207,36 @@
               font-size: $font-size-medium;
               margin: 0;
               font-weight: 400;
+            }
+          }
+        }
+        .card-restaurant__btn {
+          border: none;
+          background-color: $white-color;
+          cursor: pointer;
+          background-clip: text;
+          .card-restaurant__btn-icon-fill {
+            display: none;
+            background-image: linear-gradient(
+              200deg,
+              $primary-color,
+              $secondary-color
+            );
+            background-clip: text;
+            -webkit-background-clip: text;
+            color: transparent;
+            font-size: $font-size-xlarge;
+          }
+          .card-restaurant__btn-icon-umpty {
+            font-size: $font-size-xlarge;
+            font-weight: 100;
+          }
+          &:hover {
+            .card-restaurant__btn-icon-fill {
+              display: flex;
+            }
+            .card-restaurant__btn-icon-umpty {
+              display: none;
             }
           }
         }
