--- a/src/css/menu-style.css
+++ b/src/css/menu-style.css
@@ -137,6 +137,10 @@
     transition: 0.5s;
     animation: fadein 1.6s;
   }
+  .menu .menu__card:nth-child(4n) {
+    transition: 0.5s;
+    animation: fadein 1.9s;
+  }
   .menu .menu__card:last-child {
     margin: 0;
   }
