--- a/src/sass/menu-style-desktop.scss
+++ b/src/sass/menu-style-desktop.scss
@@ -111,6 +111,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      flex-wrap: wrap;
       .menu__card {
         display: flex;
         align-items: center;
@@ -132,6 +133,10 @@
         &:nth-child(3n) {
           transition: 0.5s;
           animation: fadein 1.6s;
+        }
+        &:nth-child(4n) {
+          transition: 0.5s;
+          animation: fadein 1.9s;
         }
         &:last-child {
           margin: 0;
