--- a/src/sass/menu-style-tablet.scss
+++ b/src/sass/menu-style-tablet.scss
@@ -76,6 +76,7 @@
           -webkit-background-clip: text;
           color: transparent;
           font-size: $font-size-xlarge;
+          animation: heart-slide 0.8s;
         }
         .menu-main-title__btn-icon-umpty {
           font-size: $font-size-xlarge;
@@ -184,6 +185,7 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       h4 {
+        font-size: 18px;
         overflow: hidden;
         width: 100%;
         text-overflow: ellipsis;
@@ -191,6 +193,7 @@
         padding: 2px;
       }
       p {
+        font-size: $font-size-medium;
         overflow: hidden;
         width: 100%;
         text-overflow: ellipsis;
@@ -236,6 +239,7 @@
       &:hover {
         filter: brightness(1.1);
         cursor: pointer;
+        box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
       }
     }
   }
