--- a/src/css/menu-style-desktop.css
+++ b/src/css/menu-style-desktop.css
@@ -24,6 +24,17 @@
     transform: rotate(360deg);
   }
 }
+@keyframes heart-slide {
+  from {
+    transform-origin: bottom;
+    transform: scaley(0);
+    opacity: 0.1;
+  }
+  to {
+    transform: scaley(1);
+    opacity: 1;
+  }
+}
 @media screen and (min-width: 992px) {
   body {
     width: 100%;
@@ -93,6 +104,7 @@
     -webkit-background-clip: text;
     color: transparent;
     font-size: 24px;
+    animation: heart-slide 1s;
   }
   .menu .menu__main-title .menu-main-title__btn .menu-main-title__btn-icon-umpty {
     font-size: 24px;
@@ -203,6 +215,7 @@
     text-overflow: ellipsis;
   }
   .menu .menu__container-cards .menu__card-text h4 {
+    font-size: 16px;
     overflow: hidden;
     width: 100%;
     text-overflow: ellipsis;
@@ -210,6 +223,7 @@
     padding: 2px;
   }
   .menu .menu__container-cards .menu__card-text p {
+    font-size: 16px;
     overflow: hidden;
     width: 100%;
     text-overflow: ellipsis;
@@ -251,6 +265,7 @@
   .section-menu__btn .menu__btn:hover {
     filter: brightness(1.1);
     cursor: pointer;
+    box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
   }
   .footer {
     background-color: #363636;
