--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -7,6 +7,11 @@
     font-family: Roboto, Times New Roman, Times, serif;
     background-color: $lightgray-color;
   }
+  .loarder-section {
+    height: 100%;
+    width: 100%;
+    background-color: red;
+  }
   .header {
     width: 100%;
     height: 60px;
@@ -17,7 +22,7 @@
 
     .size-logo {
       display: flex;
-      width: 50%;
+      width: 160px;
       height: 40px;
     }
   }
@@ -78,9 +83,9 @@
         margin-bottom: 30px;
         box-shadow: 5px 5px 5px $darkgray-color;
         &:hover {
-          filter: brightness(1.15);
+          filter: brightness(1.1);
           cursor: pointer;
-          box-shadow: 5px 5px 5px $dark-color;
+          box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
         }
       }
     }
@@ -173,9 +178,8 @@
           position: relative;
           overflow: hidden;
           .card-restaurant__header-img {
-            width: 100%;
+            min-width: 100%;
             height: 100%;
-            height: auto;
             object-fit: cover;
             border-radius: 16px 16px 0px 0px;
           }
@@ -214,7 +218,9 @@
             -webkit-background-clip: text;
             color: transparent;
             font-size: $font-size-xlarge;
+            animation: heart-slide 1s;
           }
+
           .card-restaurant__btn-icon-umpty {
             font-size: $font-size-xlarge;
             font-weight: 100;
@@ -231,7 +237,7 @@
       }
     }
     .card-restaurant.new .card-restaurant__header::after {
-      font-size: $font-size-small;
+      font-size: 14px;
       content: "Nouveau";
       position: absolute;
       padding: 6px 10px;
