--- a/src/css/menu-style-desktop.css
+++ b/src/css/menu-style-desktop.css
@@ -26,13 +26,38 @@
 }
 @keyframes heart-slide {
   from {
-    transform-origin: bottom;
-    transform: scaley(0);
-    opacity: 0.1;
+    height: 0%;
   }
   to {
-    transform: scaley(1);
+    height: 100%;
+  }
+}
+@keyframes disappear {
+  0% {
+    transform: scale(1);
+  }
+  99.99% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes opacity-heart {
+  0% {
     opacity: 1;
+  }
+  20% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 0.8;
+  }
+  60% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
   }
 }
 @media screen and (min-width: 992px) {
@@ -64,7 +89,7 @@
     font-size: 40px;
   }
   .main .header__img {
-    height: 550px;
+    height: 380px;
     width: 100%;
     overflow: hidden;
   }
@@ -96,25 +121,34 @@
     background-color: #f5f5f5;
     cursor: pointer;
     background-clip: text;
+    margin: 0;
+    height: 24px;
   }
   .menu .menu__main-title .menu-main-title__btn .menu-main-title__btn-icon-fill {
-    display: none;
+    visibility: hidden;
     background-image: linear-gradient(200deg, #9356dc, #ff79da);
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
     font-size: 24px;
-    animation: heart-slide 1s;
+    margin: 0;
   }
   .menu .menu__main-title .menu-main-title__btn .menu-main-title__btn-icon-umpty {
     font-size: 24px;
     font-weight: 100;
   }
   .menu .menu__main-title .menu-main-title__btn:hover .menu-main-title__btn-icon-fill {
-    display: flex;
+    position: relative;
+    left: 53.9%;
+    visibility: inherit;
+    animation: heart-slide 2s;
+    animation-timing-function: ease-in-out;
+    transform-origin: translateY(-20px);
   }
   .menu .menu__main-title .menu-main-title__btn:hover .menu-main-title__btn-icon-umpty {
-    display: none;
+    visibility: inherit;
+    transform: scale(1);
+    animation: opacity-heart 2s forwards;
   }
   .menu .menu__title {
     margin-top: 30px;
@@ -215,7 +249,7 @@
     text-overflow: ellipsis;
   }
   .menu .menu__container-cards .menu__card-text h4 {
-    font-size: 16px;
+    font-size: 15px;
     overflow: hidden;
     width: 100%;
     text-overflow: ellipsis;
@@ -223,7 +257,7 @@
     padding: 2px;
   }
   .menu .menu__container-cards .menu__card-text p {
-    font-size: 16px;
+    font-size: 11px;
     overflow: hidden;
     width: 100%;
     text-overflow: ellipsis;
