--- a/src/css/menu-style-tablet.css
+++ b/src/css/menu-style-tablet.css
@@ -26,13 +26,38 @@
 }
 @keyframes heart-slide {
   from {
-    transform-origin: bottom;
-    transform: scaley(0);
-    opacity: 0.1;
+    height: 0%;
   }
   to {
-    transform: scaley(1);
+    height: 100%;
+  }
+}
+@keyframes disappear {
+  0% {
+    transform: scale(1);
+  }
+  99.99% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes opacity-heart {
+  0% {
     opacity: 1;
+  }
+  20% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 0.8;
+  }
+  60% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 992px) {
@@ -94,25 +119,34 @@
     background-color: #f5f5f5;
     cursor: pointer;
     background-clip: text;
+    margin: 0;
+    height: 24px;
   }
   .menu .menu__main-title .menu-main-title__btn .menu-main-title__btn-icon-fill {
-    display: none;
+    visibility: hidden;
     background-image: linear-gradient(200deg, #9356dc, #ff79da);
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
     font-size: 24px;
-    animation: heart-slide 0.8s;
+    margin: 0;
   }
   .menu .menu__main-title .menu-main-title__btn .menu-main-title__btn-icon-umpty {
     font-size: 24px;
     font-weight: 100;
   }
   .menu .menu__main-title .menu-main-title__btn:hover .menu-main-title__btn-icon-fill {
-    display: flex;
+    position: relative;
+    left: 53.9%;
+    visibility: inherit;
+    animation: heart-slide 2s;
+    animation-timing-function: ease-in-out;
+    transform-origin: translateY(-20px);
   }
   .menu .menu__main-title .menu-main-title__btn:hover .menu-main-title__btn-icon-umpty {
-    display: none;
+    visibility: inherit;
+    transform: scale(1);
+    animation: opacity-heart 2s forwards;
   }
   .menu .menu__title {
     margin-top: 30px;
