--- a/src/css/menu-style.css
+++ b/src/css/menu-style.css
@@ -26,13 +26,38 @@
 }
 @keyframes heart-slide {
   from {
-    transform-origin: bottom;
-    transform: scaley(0);
-    opacity: 0.1;
+    height: 0%;
   }
   to {
-    transform: scaley(1);
+    height: 100%;
+  }
+}
+@keyframes disappear {
+  0% {
+    transform: scale(1);
+  }
+  99.99% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes opacity-heart {
+  0% {
     opacity: 1;
+  }
+  20% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 0.8;
+  }
+  60% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
   }
 }
 @media screen and (max-width: 768px) {
@@ -89,31 +114,49 @@
     font-weight: 100;
     font-family: Shrikhand;
   }
+}
+@media screen and (max-width: 768px) and (max-width: 335px) {
+  .menu .menu__main-title h2 {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 768px) {
   .menu .menu__main-title .menu-main-title__btn {
     border: none;
     background-color: #f5f5f5;
     cursor: pointer;
     background-clip: text;
+    margin: 0;
+    height: 24px;
   }
   .menu .menu__main-title .menu-main-title__btn .menu-main-title__btn-icon-fill {
-    display: none;
+    visibility: hidden;
     background-image: linear-gradient(200deg, #9356dc, #ff79da);
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
     font-size: 24px;
-    animation: heart-slide 1s;
+    margin: 0;
   }
   .menu .menu__main-title .menu-main-title__btn .menu-main-title__btn-icon-umpty {
     font-size: 24px;
     font-weight: 100;
   }
   .menu .menu__main-title .menu-main-title__btn:hover .menu-main-title__btn-icon-fill {
-    display: flex;
+    position: relative;
+    left: 53.9%;
+    visibility: inherit;
+    animation: heart-slide 2s;
+    animation-timing-function: ease-in-out;
+    transform-origin: translateY(-20px);
   }
   .menu .menu__main-title .menu-main-title__btn:hover .menu-main-title__btn-icon-umpty {
-    display: none;
+    visibility: inherit;
+    transform: scale(1);
+    animation: opacity-heart 2s forwards;
   }
+}
+@media screen and (max-width: 768px) {
   .menu .menu__title {
     margin-top: 30px;
     height: 40px;
@@ -127,6 +170,8 @@
     height: 26px;
     font-weight: 400;
   }
+}
+@media screen and (max-width: 768px) {
   .menu .menu__card {
     display: flex;
     align-items: center;
@@ -196,6 +241,8 @@
     font-size: 24px;
     color: #ffffff;
   }
+}
+@media screen and (max-width: 768px) {
   .menu .menu__card-text {
     display: flex;
     flex-direction: column;
@@ -222,21 +269,31 @@
     margin: 0;
     text-overflow: ellipsis;
   }
+}
+@media screen and (max-width: 768px) {
   .menu .menu__card-price {
     width: 15%;
   }
+}
+@media screen and (max-width: 768px) {
   .menu .starter {
     width: 92%;
     margin: auto;
   }
+}
+@media screen and (max-width: 768px) {
   .menu .dish {
     width: 92%;
     margin: auto;
   }
+}
+@media screen and (max-width: 768px) {
   .menu .dessert {
     width: 92%;
     margin: auto;
   }
+}
+@media screen and (max-width: 768px) {
   .section-menu__btn {
     display: flex;
     justify-content: center;
@@ -257,6 +314,8 @@
     cursor: pointer;
     box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
   }
+}
+@media screen and (max-width: 768px) {
   .footer {
     background-color: #363636;
     padding: 10px;
