--- a/src/css/style.css
+++ b/src/css/style.css
@@ -26,25 +26,82 @@
 }
 @keyframes heart-slide {
   from {
-    transform-origin: bottom;
-    transform: scaley(0);
-    opacity: 0.1;
+    height: 0%;
   }
   to {
-    transform: scaley(1);
-    opacity: 1;
+    height: 100%;
   }
 }
+@keyframes disappear {
+  0% {
+    transform: scale(1);
+  }
+  99.99% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes opacity-heart {
+  0% {
+    opacity: 1;
+  }
+  20% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 0.8;
+  }
+  60% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.loader-section {
+  background-color: #159375;
+  font-size: 24px;
+  font-family: roboto;
+  height: 100vh;
+  line-height: 500px;
+  text-align: center;
+  inset: 0;
+  z-index: 1;
+  position: fixed;
+  animation: disappear 1s forwards;
+}
+
+.loader-section .loarder {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  border-radius: 50px;
+  border: 6px solid rgba(255, 255, 255, 0.4);
+  vertical-align: middle;
+  position: relative;
+}
+
+.loader-section .loarder::after {
+  content: "";
+  position: absolute;
+  top: -6px;
+  left: -6px;
+  bottom: -6px;
+  right: -6px;
+  border-radius: 50px;
+  border: 6px solid transparent;
+  border-top-color: white;
+  border-bottom-color: white;
+  animation: spin 1s linear 0s infinite;
+}
+
 @media screen and (max-width: 768px) {
   body {
     width: 100%;
     font-family: Roboto, Times New Roman, Times, serif;
     background-color: #f5f5f5;
-  }
-  .loarder-section {
-    height: 100%;
-    width: 100%;
-    background-color: red;
   }
   .header {
     width: 100%;
@@ -213,6 +270,7 @@
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__content {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 16px;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__content .card-restaurant__content-text {
@@ -233,25 +291,34 @@
     background-color: #ffffff;
     cursor: pointer;
     background-clip: text;
+    position: relative;
+    height: 24px;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__btn .card-restaurant__btn-icon-fill {
-    display: none;
+    visibility: hidden;
     background-image: linear-gradient(200deg, #9356dc, #ff79da);
     background-clip: text;
     -webkit-background-clip: text;
     color: transparent;
     font-size: 24px;
-    animation: heart-slide 1s;
+    margin: 0;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__btn .card-restaurant__btn-icon-umpty {
     font-size: 24px;
     font-weight: 100;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__btn:hover .card-restaurant__btn-icon-fill {
-    display: flex;
+    position: relative;
+    left: 53.9%;
+    visibility: inherit;
+    animation: heart-slide 2s;
+    animation-timing-function: ease-in-out;
+    transform-origin: translateY(-20px);
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__btn:hover .card-restaurant__btn-icon-umpty {
-    display: none;
+    visibility: inherit;
+    transform: scale(1);
+    animation: opacity-heart 2s forwards;
   }
   .restaurant-list .card-restaurant.new .card-restaurant__header::after {
     font-size: 14px;
