--- a/src/sass/menu-style-desktop.scss
+++ b/src/sass/menu-style-desktop.scss
@@ -1,5 +1,6 @@
-@import "./variables";
-@import "./keyframes";
+@import "utils/variables";
+@import "utils/keyframes";
+@import "utils/mixins";
 
 @media screen and (min-width: $breakpoints-desktop) {
   body {
@@ -33,7 +34,7 @@
   //  main image
   .main {
     .header__img {
-      height: 550px;
+      height: 380px;
       width: 100%;
       overflow: hidden;
       .header__img-style {
@@ -62,37 +63,7 @@
         font-weight: 100;
         font-family: Shrikhand;
       }
-      .menu-main-title__btn {
-        border: none;
-        background-color: $lightgray-color;
-        cursor: pointer;
-        background-clip: text;
-        .menu-main-title__btn-icon-fill {
-          display: none;
-          background-image: linear-gradient(
-            200deg,
-            $primary-color,
-            $secondary-color
-          );
-          background-clip: text;
-          -webkit-background-clip: text;
-          color: transparent;
-          font-size: $font-size-xlarge;
-          animation: heart-slide 1s;
-        }
-        .menu-main-title__btn-icon-umpty {
-          font-size: $font-size-xlarge;
-          font-weight: 100;
-        }
-        &:hover {
-          .menu-main-title__btn-icon-fill {
-            display: flex;
-          }
-          .menu-main-title__btn-icon-umpty {
-            display: none;
-          }
-        }
-      }
+      @import "components/heart-menu";
     }
     .menu__title {
       h3 {
@@ -192,7 +163,7 @@
         white-space: nowrap;
         text-overflow: ellipsis;
         h4 {
-          font-size: $font-size-medium;
+          font-size: 15px;
           overflow: hidden;
           width: 100%;
           text-overflow: ellipsis;
@@ -200,7 +171,7 @@
           padding: 2px;
         }
         p {
-          font-size: $font-size-medium;
+          font-size: 11px;
           overflow: hidden;
           width: 100%;
           text-overflow: ellipsis;
