--- a/src/sass/style.desktop.scss
+++ b/src/sass/style.desktop.scss
@@ -1,5 +1,7 @@
-@import "./variables";
-@import "./keyframes";
+@import "utils/variables";
+@import "utils/keyframes";
+@import "utils/mixins";
+@import "components/loader";
 
 @media screen and (min-width: $breakpoints-desktop) {
   body {
@@ -7,6 +9,7 @@
     font-family: Roboto, Times New Roman, Times, serif;
     background-color: $lightgray-color;
   }
+
   .main {
     display: flex;
     flex-direction: column-reverse;
@@ -201,6 +204,7 @@
         .card-restaurant__content {
           display: flex;
           justify-content: space-between;
+          align-items: center;
           padding: 16px;
           .card-restaurant__content-text {
             margin: 0;
@@ -216,37 +220,7 @@
             }
           }
         }
-        .card-restaurant__btn {
-          border: none;
-          background-color: $white-color;
-          cursor: pointer;
-          background-clip: text;
-          .card-restaurant__btn-icon-fill {
-            display: none;
-            background-image: linear-gradient(
-              200deg,
-              $primary-color,
-              $secondary-color
-            );
-            background-clip: text;
-            -webkit-background-clip: text;
-            color: transparent;
-            font-size: $font-size-xlarge;
-            animation: heart-slide 1s;
-          }
-          .card-restaurant__btn-icon-umpty {
-            font-size: $font-size-xlarge;
-            font-weight: 100;
-          }
-          &:hover {
-            .card-restaurant__btn-icon-fill {
-              display: flex;
-            }
-            .card-restaurant__btn-icon-umpty {
-              display: none;
-            }
-          }
-        }
+        @import "components/heart-cards";
       }
     }
     .card-restaurant.new .card-restaurant__header::after {
