--- a/src/sass/utils/_keyframes.scss
+++ b/src/sass/utils/_keyframes.scss
@@ -28,12 +28,39 @@
 
 @keyframes heart-slide {
   from {
-    transform-origin: bottom;
-    transform: scaley(0);
-    opacity: 0.1;
+    height: 0%;
   }
   to {
-    transform: scaley(1);
+    height: 100%;
+  }
+}
+
+@keyframes disappear {
+  0% {
+    transform: scale(1);
+  }
+  99.99% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+@keyframes opacity-heart {
+  0% {
     opacity: 1;
+  }
+
+  20% {
+    opacity: 1;
+  }
+  40% {
+    opacity: 0.8;
+  }
+  60% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 0;
   }
 }
