--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,7 +97,7 @@
   animation: spin 1s linear 0s infinite;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   body {
     width: 100%;
     font-family: Roboto, Times New Roman, Times, serif;
@@ -158,9 +158,7 @@
     font-size: 20px;
     opacity: 0.6;
   }
-  .exploration .exploration-content .exploration-content__btn {
-    height: 50px;
-    width: 65%;
+  .exploration .exploration-content .gradient-btn {
     border-radius: 24px 24px 24px 24px;
     background: linear-gradient(to top left, #9356dc, #ff79da);
     color: #ffffff;
@@ -169,10 +167,14 @@
     margin-bottom: 30px;
     box-shadow: 5px 5px 5px #ebebeb;
   }
-  .exploration .exploration-content .exploration-content__btn:hover {
+  .exploration .exploration-content .gradient-btn:hover {
     filter: brightness(1.1);
     cursor: pointer;
     box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
+  }
+  .exploration .exploration-content .gradient-btn {
+    height: 50px;
+    width: 65%;
   }
   .user-guide {
     background-color: #ffffff;
@@ -183,7 +185,7 @@
   }
   .user-guide h2 {
     margin-left: 1%;
-    font-style: bold;
+    font-weight: bold;
     font-size: 24px;
   }
   .user-guide .user-guide__container {
@@ -212,19 +214,21 @@
     color: #9356dc;
   }
   .user-guide .user-guide__container .user-guide__card .user-guide__number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 20px;
     border: 1px solid;
     border-radius: 25px 25px 25px 25px;
     width: 24px;
     height: 24px;
     position: relative;
-    right: 16px;
+    right: 13px;
     color: #ffffff;
     background-color: #9356dc;
   }
   .user-guide .user-guide__container .user-guide__card .user-guide__text {
     font-size: 20px;
-    font-style: bold;
     font-weight: 700;
   }
   .restaurant-list {
@@ -232,7 +236,7 @@
   }
   .restaurant-list h2 {
     font-size: 24px;
-    font-style: bold;
+    font-weight: bold;
     margin-left: 5%;
     margin-bottom: 7%;
     padding-top: 11%;
@@ -251,9 +255,18 @@
     text-decoration: none;
     color: inherit;
     border-radius: 16px 16px 16px 16px;
+    position: relative;
   }
   .restaurant-list .restaurant-list-container .card-restaurant:last-child {
     margin-bottom: 0;
+  }
+  .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__link {
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__header {
     height: 70%;
@@ -313,7 +326,6 @@
     visibility: inherit;
     animation: heart-slide 2s;
     animation-timing-function: ease-in-out;
-    transform-origin: translateY(-20px);
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__btn:hover .card-restaurant__btn-icon-umpty {
     visibility: inherit;
