--- a/src/css/style.tablet.css
+++ b/src/css/style.tablet.css
@@ -97,7 +97,7 @@
   animation: spin 1s linear 0s infinite;
 }
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 767px) and (max-width: 992px) {
   body {
     width: 100%;
     font-family: Roboto, Times New Roman, Times, serif;
@@ -159,21 +159,24 @@
     font-size: 20px;
     opacity: 0.6;
   }
-  .exploration .exploration-content .exploration-content__btn {
-    height: 70px;
-    width: 50%;
+  .exploration .exploration-content .gradient-btn {
     border-radius: 24px 24px 24px 24px;
     background: linear-gradient(to top left, #9356dc, #ff79da);
     color: #ffffff;
     border: 0px transparent;
     margin-top: 30px;
     margin-bottom: 30px;
-    box-shadow: 5px 5px 5px #f5f5f5;
+    box-shadow: 5px 5px 5px #ebebeb;
   }
-  .exploration .exploration-content .exploration-content__btn:hover {
+  .exploration .exploration-content .gradient-btn:hover {
     filter: brightness(1.1);
     cursor: pointer;
     box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
+  }
+  .exploration .exploration-content .gradient-btn {
+    font-size: 24px;
+    height: 70px;
+    width: 50%;
   }
   .main {
     display: flex;
@@ -188,7 +191,7 @@
   .user-guide h2 {
     display: flex;
     justify-content: center;
-    font-style: bold;
+    font-weight: bold;
     font-size: 40px;
     margin-bottom: 28px;
   }
@@ -208,11 +211,13 @@
     border-radius: 16px 16px 16px 16px;
     box-shadow: 4px 4px 6px #f5f5f5;
     border: 0px transparent;
-    height: 80px;
-    width: 38%;
+    height: 10px;
+    width: 33%;
     padding: 50px;
   }
   .user-guide .user-guide__container .user-guide__card i {
+    position: relative;
+    right: 30px;
     font-size: 20px;
     width: 50px;
     color: #363636;
@@ -224,27 +229,33 @@
     color: #9356dc;
   }
   .user-guide .user-guide__container .user-guide__card .user-guide__number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-size: 20px;
     border: 1px solid;
     border-radius: 25px 25px 25px 25px;
     width: 24px;
     height: 24px;
     position: relative;
-    right: 16px;
+    right: 60px;
     color: #ffffff;
     background-color: #9356dc;
   }
   .user-guide .user-guide__container .user-guide__card .user-guide__text {
-    font-size: 20px;
-    font-style: bold;
+    position: relative;
+    right: 30px;
+    font-size: 16px;
+    font-weight: bold;
     font-weight: 700;
+    width: 200px;
   }
   .restaurant-list {
     background-color: #f5f5f5;
   }
   .restaurant-list h2 {
     font-size: 40px;
-    font-style: bold;
+    font-weight: bold;
     display: flex;
     justify-content: center;
   }
@@ -265,6 +276,18 @@
     text-decoration: none;
     color: inherit;
     border-radius: 16px 16px 16px 16px;
+    position: relative;
+  }
+  .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__link {
+    width: 100%;
+    height: 100%;
+    border-radius: 16px 16px 16px 16px;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__header {
     height: 70%;
@@ -274,6 +297,7 @@
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__header .card-restaurant__header-img {
     min-width: 100%;
+    max-width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 16px 16px 0px 0px;
@@ -325,7 +349,6 @@
     visibility: inherit;
     animation: heart-slide 2s;
     animation-timing-function: ease-in-out;
-    transform-origin: translateY(-20px);
   }
   .restaurant-list .restaurant-list-container .card-restaurant .card-restaurant__btn:hover .card-restaurant__btn-icon-umpty {
     visibility: inherit;
@@ -355,7 +378,7 @@
     color: #ffffff;
   }
   .footer .footer__container {
-    padding-left: 20px;
+    padding: 10px;
   }
   .footer .footer-ul {
     display: flex;
