--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -66,25 +66,10 @@
         font-size: $font-size-large;
         opacity: 0.6;
       }
-      .exploration-content__btn {
+      @import "components/gradient-btn";
+      .gradient-btn {
         height: 50px;
         width: 65%;
-        border-radius: 24px 24px 24px 24px;
-        background: linear-gradient(
-          to top left,
-          $primary-color,
-          $secondary-color
-        );
-        color: $white-color;
-        border: 0px transparent;
-        margin-top: 30px;
-        margin-bottom: 30px;
-        box-shadow: 5px 5px 5px $darkgray-color;
-        &:hover {
-          filter: brightness(1.1);
-          cursor: pointer;
-          box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
-        }
       }
     }
   }
@@ -97,7 +82,7 @@
     margin-bottom: 30px;
     h2 {
       margin-left: 1%;
-      font-style: bold;
+      font-weight: bold;
       font-size: $font-size-xlarge;
     }
     .user-guide__container {
@@ -125,19 +110,19 @@
           }
         }
         .user-guide__number {
+          @include displayflex-center;
           font-size: $font-size-large;
           border: 1px solid;
           border-radius: 25px 25px 25px 25px;
           width: 24px;
           height: 24px;
           position: relative;
-          right: 16px;
+          right: 13px;
           color: $white-color;
           background-color: $primary-color;
         }
         .user-guide__text {
           font-size: $font-size-large;
-          font-style: bold;
           font-weight: 700;
         }
       }
@@ -148,14 +133,13 @@
     background-color: $lightgray-color;
     h2 {
       font-size: $font-size-xlarge;
-      font-style: bold;
+      font-weight: bold;
       margin-left: 5%;
       margin-bottom: 7%;
       padding-top: 11%;
     }
     .restaurant-list-container {
-      width: 92%;
-      margin: auto;
+      @include fix-width;
 
       .card-restaurant {
         display: flex;
@@ -167,8 +151,17 @@
         text-decoration: none;
         color: inherit;
         border-radius: 16px 16px 16px 16px;
+        position: relative;
         &:last-child {
           margin-bottom: 0;
+        }
+        .card-restaurant__link {
+          cursor: pointer;
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
         }
         .card-restaurant__header {
           height: 70%;
@@ -216,37 +209,5 @@
     }
   }
   // footer
-  .footer {
-    margin-top: 15%;
-    background-color: $dark-color;
-    padding: 10px;
-    h2 {
-      font-size: $font-size-medium;
-      font-weight: 400;
-      font-family: Shrikhand;
-      color: $white-color;
-    }
-    .footer__container {
-      padding-left: 20px;
-    }
-    ul {
-      list-style-type: none;
-      padding: 0;
-      line-height: 1.5;
-      a {
-        font-weight: 600;
-        color: $white-color;
-        text-decoration: none;
-        opacity: 1;
-        &:hover {
-          opacity: 0.8;
-        }
-      }
-    }
-    i {
-      width: 12px;
-      margin-right: 10px;
-      color: $white-color;
-    }
-  }
+  @import "layouts/footer-mobile";
 }
