--- a/src/css/menu-style-desktop.css
+++ b/src/css/menu-style-desktop.css
@@ -143,7 +143,6 @@
     visibility: inherit;
     animation: heart-slide 2s;
     animation-timing-function: ease-in-out;
-    transform-origin: translateY(-20px);
   }
   .menu .menu__main-title .menu-main-title__btn:hover .menu-main-title__btn-icon-umpty {
     visibility: inherit;
@@ -153,7 +152,6 @@
   .menu .menu__title {
     margin-top: 30px;
     height: 40px;
-    border-bottom: 2x solid #99e2d0;
   }
   .menu .menu__title h3 {
     margin: 0;
@@ -221,7 +219,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    text-overflow: ellipsis;
   }
   .menu .menu__container-cards .menu__card:hover .menu__card-price {
     margin: 0;
@@ -251,19 +248,18 @@
   .menu .menu__container-cards .menu__card-text h4 {
     font-size: 15px;
     overflow: hidden;
-    width: 100%;
     text-overflow: ellipsis;
+    width: 100%;
     margin: 0;
     padding: 2px;
   }
   .menu .menu__container-cards .menu__card-text p {
     font-size: 11px;
     overflow: hidden;
-    width: 100%;
     text-overflow: ellipsis;
+    width: 100%;
     padding: 2px;
     margin: 0;
-    text-overflow: ellipsis;
   }
   .menu .menu__container-cards .menu__card-price {
     width: 15%;
@@ -285,21 +281,24 @@
     justify-content: center;
     background-color: #f5f5f5;
   }
-  .section-menu__btn .menu__btn {
-    font-size: 24px;
-    height: 50px;
-    width: 20%;
+  .section-menu__btn .gradient-btn {
     border-radius: 24px 24px 24px 24px;
     background: linear-gradient(to top left, #9356dc, #ff79da);
     color: #ffffff;
     border: 0px transparent;
     margin-top: 30px;
     margin-bottom: 30px;
+    box-shadow: 5px 5px 5px #ebebeb;
   }
-  .section-menu__btn .menu__btn:hover {
+  .section-menu__btn .gradient-btn:hover {
     filter: brightness(1.1);
     cursor: pointer;
     box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
+  }
+  .section-menu__btn .gradient-btn {
+    font-size: 24px;
+    height: 50px;
+    width: 20%;
   }
   .footer {
     background-color: #363636;
@@ -314,7 +313,7 @@
     color: #ffffff;
   }
   .footer .footer__container {
-    padding-left: 20px;
+    padding: 10px;
   }
   .footer .footer-ul {
     display: flex;
