--- a/src/css/menu-style-tablet.css
+++ b/src/css/menu-style-tablet.css
@@ -60,7 +60,7 @@
     opacity: 0;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 767px) and (max-width: 992px) {
   body {
     width: 100%;
     height: 100%;
@@ -141,7 +141,6 @@
     visibility: inherit;
     animation: heart-slide 2s;
     animation-timing-function: ease-in-out;
-    transform-origin: translateY(-20px);
   }
   .menu .menu__main-title .menu-main-title__btn:hover .menu-main-title__btn-icon-umpty {
     visibility: inherit;
@@ -151,7 +150,6 @@
   .menu .menu__title {
     margin-top: 30px;
     height: 40px;
-    border-bottom: 2x solid #99e2d0;
   }
   .menu .menu__title h3 {
     margin: 0;
@@ -212,7 +210,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    text-overflow: ellipsis;
   }
   .menu .menu__card:hover .menu__card-price {
     margin: 0;
@@ -242,19 +239,18 @@
   .menu .menu__card-text h4 {
     font-size: 18px;
     overflow: hidden;
-    width: 100%;
     text-overflow: ellipsis;
+    width: 100%;
     margin: 0;
     padding: 2px;
   }
   .menu .menu__card-text p {
     font-size: 16px;
     overflow: hidden;
-    width: 100%;
     text-overflow: ellipsis;
+    width: 100%;
     padding: 2px;
     margin: 0;
-    text-overflow: ellipsis;
   }
   .menu .menu__card-price {
     width: 15%;
@@ -276,20 +272,24 @@
     justify-content: center;
     background-color: #f5f5f5;
   }
-  .section-menu__btn .menu__btn {
-    height: 50px;
-    width: 30%;
+  .section-menu__btn .gradient-btn {
     border-radius: 24px 24px 24px 24px;
     background: linear-gradient(to top left, #9356dc, #ff79da);
     color: #ffffff;
     border: 0px transparent;
     margin-top: 30px;
     margin-bottom: 30px;
+    box-shadow: 5px 5px 5px #ebebeb;
   }
-  .section-menu__btn .menu__btn:hover {
+  .section-menu__btn .gradient-btn:hover {
     filter: brightness(1.1);
     cursor: pointer;
     box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
+  }
+  .section-menu__btn .gradient-btn {
+    font-size: 20px;
+    height: 50px;
+    width: 30%;
   }
   .footer {
     background-color: #363636;
@@ -304,7 +304,7 @@
     color: #ffffff;
   }
   .footer .footer__container {
-    padding-left: 20px;
+    padding: 10px;
   }
   .footer .footer-ul {
     display: flex;
