--- a/src/css/menu-style.css
+++ b/src/css/menu-style.css
@@ -60,7 +60,7 @@
     opacity: 0;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   body {
     width: 100%;
     height: 100%;
@@ -115,12 +115,12 @@
     font-family: Shrikhand;
   }
 }
-@media screen and (max-width: 768px) and (max-width: 335px) {
+@media screen and (max-width: 767px) and (max-width: 335px) {
   .menu .menu__main-title h2 {
     font-size: 18px;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .menu .menu__main-title .menu-main-title__btn {
     border: none;
     background-color: #f5f5f5;
@@ -148,7 +148,6 @@
     visibility: inherit;
     animation: heart-slide 2s;
     animation-timing-function: ease-in-out;
-    transform-origin: translateY(-20px);
   }
   .menu .menu__main-title .menu-main-title__btn:hover .menu-main-title__btn-icon-umpty {
     visibility: inherit;
@@ -156,11 +155,10 @@
     animation: opacity-heart 2s forwards;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .menu .menu__title {
     margin-top: 30px;
     height: 40px;
-    border-bottom: 2x solid #99e2d0;
   }
   .menu .menu__title h3 {
     margin: 0;
@@ -171,7 +169,7 @@
     font-weight: 400;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .menu .menu__card {
     display: flex;
     align-items: center;
@@ -242,7 +240,7 @@
     color: #ffffff;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .menu .menu__card-text {
     display: flex;
     flex-direction: column;
@@ -253,7 +251,7 @@
     text-overflow: ellipsis;
   }
   .menu .menu__card-text h4 {
-    font-size: 18px;
+    font-size: 17px;
     overflow: hidden;
     width: 100%;
     text-overflow: ellipsis;
@@ -270,59 +268,63 @@
     text-overflow: ellipsis;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .menu .menu__card-price {
     width: 15%;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .menu .starter {
     width: 92%;
     margin: auto;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .menu .dish {
     width: 92%;
     margin: auto;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .menu .dessert {
     width: 92%;
     margin: auto;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .section-menu__btn {
     display: flex;
     justify-content: center;
     background-color: #f5f5f5;
   }
-  .section-menu__btn .menu__btn {
-    height: 50px;
-    width: 50%;
+  .section-menu__btn .gradient-btn {
     border-radius: 24px 24px 24px 24px;
     background: linear-gradient(to top left, #9356dc, #ff79da);
     color: #ffffff;
     border: 0px transparent;
     margin-top: 30px;
     margin-bottom: 30px;
+    box-shadow: 5px 5px 5px #ebebeb;
   }
-  .section-menu__btn .menu__btn:hover {
+  .section-menu__btn .gradient-btn:hover {
     filter: brightness(1.1);
     cursor: pointer;
     box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
   }
+  .section-menu__btn .gradient-btn {
+    height: 50px;
+    width: 50%;
+  }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer {
+    margin-top: 15%;
     background-color: #363636;
     padding: 10px;
   }
   .footer h2 {
     font-size: 16px;
-    font-weight: 200;
+    font-weight: 400;
     font-family: Shrikhand;
     color: #ffffff;
   }
@@ -335,6 +337,7 @@
     line-height: 1.5;
   }
   .footer ul a {
+    font-weight: 600;
     color: #ffffff;
     text-decoration: none;
     opacity: 1;
