--- a/src/sass/menu-style-desktop.scss
+++ b/src/sass/menu-style-desktop.scss
@@ -77,7 +77,6 @@
 
       margin-top: 30px;
       height: 40px;
-      border-bottom: 2x solid $tertiary-color;
     }
     .menu__container-cards {
       display: flex;
@@ -131,10 +130,8 @@
         &:hover {
           cursor: pointer;
           .menu__card-text {
-            overflow: hidden;
-            text-overflow: ellipsis;
+            @include ellipsis;
             white-space: nowrap;
-            text-overflow: ellipsis;
           }
           .menu__card-price {
             margin: 0;
@@ -164,20 +161,17 @@
         text-overflow: ellipsis;
         h4 {
           font-size: 15px;
-          overflow: hidden;
+          @include ellipsis;
           width: 100%;
-          text-overflow: ellipsis;
           margin: 0;
           padding: 2px;
         }
         p {
           font-size: 11px;
-          overflow: hidden;
+          @include ellipsis;
           width: 100%;
-          text-overflow: ellipsis;
           padding: 2px;
           margin: 0;
-          text-overflow: ellipsis;
         }
       }
       .menu__card-price {
@@ -186,16 +180,13 @@
     }
   }
   .starter {
-    width: 92%;
-    margin: auto;
+    @include fix-width;
   }
   .dish {
-    width: 92%;
-    margin: auto;
+    @include fix-width;
   }
   .dessert {
-    width: 92%;
-    margin: auto;
+    @include fix-width;
   }
 
   // btn
@@ -203,62 +194,13 @@
     display: flex;
     justify-content: center;
     background-color: $lightgray-color;
-    .menu__btn {
+    @import "components/gradient-btn";
+    .gradient-btn {
       font-size: $font-size-xlarge;
       height: 50px;
       width: 20%;
-      border-radius: 24px 24px 24px 24px;
-      background: linear-gradient(
-        to top left,
-        $primary-color,
-        $secondary-color
-      );
-      color: $white-color;
-      border: 0px transparent;
-      margin-top: 30px;
-      margin-bottom: 30px;
-      &:hover {
-        filter: brightness(1.1);
-        cursor: pointer;
-        box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
-      }
     }
   }
   // footer
-  .footer {
-    background-color: $dark-color;
-    padding: 10px;
-    h2 {
-      display: flex;
-      justify-content: center;
-      font-size: $font-size-xlarge;
-      font-weight: 400;
-      font-family: Shrikhand;
-      color: $white-color;
-    }
-    .footer__container {
-      padding-left: 20px;
-    }
-    .footer-ul {
-      display: flex;
-      justify-content: space-around;
-      list-style-type: none;
-      padding: 0;
-      line-height: 1.5;
-      .footer-ul__li-a {
-        font-weight: 600;
-        color: $white-color;
-        text-decoration: none;
-        opacity: 1;
-        &:hover {
-          opacity: 0.8;
-        }
-      }
-    }
-    .footer-ul__li-icon {
-      width: 12px;
-      margin-right: 10px;
-      color: $white-color;
-    }
-  }
+  @import "layouts/footer-largescreen";
 }
