--- a/src/sass/style.tablet.scss
+++ b/src/sass/style.tablet.scss
@@ -67,25 +67,11 @@
         font-size: $font-size-large;
         opacity: 0.6;
       }
-      .exploration-content__btn {
+      @import "components/gradient-btn";
+      .gradient-btn {
+        font-size: $font-size-xlarge;
         height: 70px;
         width: 50%;
-        border-radius: 24px 24px 24px 24px;
-        background: linear-gradient(
-          to top left,
-          $primary-color,
-          $secondary-color
-        );
-        color: $white-color;
-        border: 0px transparent;
-        margin-top: 30px;
-        margin-bottom: 30px;
-        box-shadow: 5px 5px 5px $lightgray-color;
-        &:hover {
-          filter: brightness(1.1);
-          cursor: pointer;
-          box-shadow: 5px 5px 5px rgba(0, 0, 255, 0.2);
-        }
       }
     }
   }
@@ -103,7 +89,7 @@
     h2 {
       display: flex;
       justify-content: center;
-      font-style: bold;
+      font-weight: bold;
       font-size: 40px;
       margin-bottom: 28px;
     }
@@ -123,10 +109,12 @@
         border-radius: 16px 16px 16px 16px;
         box-shadow: 4px 4px 6px $lightgray-color;
         border: 0px transparent;
-        height: 80px;
-        width: 38%;
+        height: 10px;
+        width: 33%;
         padding: 50px;
         i {
+          position: relative;
+          right: 30px;
           font-size: $font-size-large;
           width: 50px;
           color: $dark-color;
@@ -139,20 +127,24 @@
           }
         }
         .user-guide__number {
+          @include displayflex-center;
           font-size: $font-size-large;
           border: 1px solid;
           border-radius: 25px 25px 25px 25px;
           width: 24px;
           height: 24px;
           position: relative;
-          right: 16px;
+          right: 60px;
           color: $white-color;
           background-color: $primary-color;
         }
         .user-guide__text {
-          font-size: $font-size-large;
-          font-style: bold;
+          position: relative;
+          right: 30px;
+          font-size: $font-size-medium;
+          font-weight: bold;
           font-weight: 700;
+          width: 200px;
         }
       }
     }
@@ -162,13 +154,12 @@
     background-color: $lightgray-color;
     h2 {
       font-size: 40px;
-      font-style: bold;
+      font-weight: bold;
       display: flex;
       justify-content: center;
     }
     .restaurant-list-container {
-      width: 92%;
-      margin: auto;
+      @include fix-width;
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
@@ -183,7 +174,18 @@
         text-decoration: none;
         color: inherit;
         border-radius: 16px 16px 16px 16px;
-
+        position: relative;
+        .card-restaurant__link {
+          width: 100%;
+          height: 100%;
+          border-radius: 16px 16px 16px 16px;
+          cursor: pointer;
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+        }
         .card-restaurant__header {
           height: 70%;
           background-size: cover;
@@ -191,6 +193,7 @@
           overflow: hidden;
           .card-restaurant__header-img {
             min-width: 100%;
+            max-width: 100%;
             height: 100%;
             object-fit: cover;
             border-radius: 16px 16px 0px 0px;
@@ -231,40 +234,5 @@
     }
   }
   // footer
-  .footer {
-    background-color: $dark-color;
-    padding: 10px;
-    h2 {
-      display: flex;
-      justify-content: center;
-      font-size: $font-size-xlarge;
-      font-weight: 400;
-      font-family: Shrikhand;
-      color: $white-color;
-    }
-    .footer__container {
-      padding-left: 20px;
-    }
-    .footer-ul {
-      display: flex;
-      justify-content: space-around;
-      list-style-type: none;
-      padding: 0;
-      line-height: 1.5;
-      .footer-ul__li-a {
-        font-weight: 600;
-        color: $white-color;
-        text-decoration: none;
-        opacity: 1;
-        &:hover {
-          opacity: 0.8;
-        }
-      }
-    }
-    .footer-ul__li-icon {
-      width: 12px;
-      margin-right: 10px;
-      color: $white-color;
-    }
-  }
+  @import "layouts/footer-largescreen";
 }
